[package]
name = "rustkuval"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
validator = "0.16"
anyhow = "1.0"
async-recursion = "1.0"

[dev-dependencies]
